--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <div class="container">
-    <label for="visit">visit the six (7) extension links</label> <button id="visit-btn" onclick="visit()">visit</button>
+    <label for="visit">visit the seven (7) extension links</label> <button id="visit-btn" onclick="visit()">visit</button>
 </div>
 
 
@@ -49,3 +49,4 @@ function visit(){
 }
 
 </script>
+
